# broombroom

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
src/broombroom/: __init__.py  config.py  errors.py  http.py  logging.py
src/broombroom/data/adapters/: fastf1_adapter.py  jolpica_adapter.py  openf1_adapter.py
src/broombroom/data/cache/: cache_manager.py
src/broombroom/data/loaders/: __init__.py  season_loader.py  session_loader.py
src/broombroom/data/models/: __init__.py  analysis.py  circuit.py  event.py  prediction.py  results.py  session.py  stint.py  telemetry.py  weekend.py
tests/: conftest.py
tests/unit/data/: test_cache_manager.py  test_fastf1_adapter.py  test_jolpica_adapter.py  test_models.py  test_openf1_adapter.py  test_season_loader.py  test_session_loader.py
