[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "broombroom"
version = "0.1.0"
description = "F1 analysis and prediction platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data sources
    "fastf1>=3.4",
    "httpx>=0.27",
    "tenacity>=8.3",

    # Data processing
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",

    # ML
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "joblib>=1.4",

    # Experiment tracking
    "mlflow>=2.13",

    # Config and validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # CLI
    "typer>=0.12",

    # Logging
    "structlog>=24.2",

    # Visualization
    "plotly>=5.22",
    "matplotlib>=3.9",
    "kaleido>=0.2",

    # UI
    "streamlit>=1.36",
]

[project.optional-dependencies]
dl = [
    "torch>=2.3",
    "optuna>=3.6",
]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "jupyter>=1.0",
    "nbformat>=5.10",
]

[project.scripts]
broombroom = "broombroom.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/broombroom"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"notebooks/**" = ["ANN", "E402"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
exclude = ["tests", "notebooks"]
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration (require real API calls, deselect with -m 'not integration')",
    "dl: marks tests as requiring PyTorch",
]
filterwarnings = [
    "ignore::DeprecationWarning:fastf1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "pyright>=1.1.370",
    "jupyter>=1.0",
    "nbformat>=5.10",
]
